db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubewatch-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubewatch-db
  template:
    metadata:
      labels:
        app: kubewatch-db
    spec:
      containers:
        - name: postgres
          image: postgres:14
          ports:
            - containerPort: 5432
