db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubewatch-db
spec:
  selector:
    app: kubewatch-db
  ports:
    - port: 5432
      targetPort: 5432
