web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubewatch-web
spec:
  selector:
    app: kubewatch-web
  ports:
    - port: 8000
      targetPort: 8000
  type: NodePort
